# tanzil-telegram-bot

./: .coverage  .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION-GUIDE.md  LICENSE  PRODUCTION-READY-AR.md  PRODUCTION.md  README.md  RELEASE-NOTES.md  RENDER_DEPLOYMENT.md  SECURITY.md  SYSTEM_CONTEXT.md  config.yaml  debug-session.js  design.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  generate-session-arg.js  generate-session.js  jest.config.js  package-lock.json  package.json  plan.md  pnpm-lock.yaml  prd.md  pyproject.toml  render.yaml  research.md  tasks.md  test-gram.js  test_cobalt_debug.ts  todo.md  (+2 more)
.github/: pull_request_template.md
.specify/: feature.json
.tanzil/: config.yaml
data/: store.json
docker/: bot.Dockerfile  core.Dockerfile
docs/: RENDER_DEPLOYMENT.md  SYSTEM_CONTEXT.md  configuration.md  database-setup.md  design.md  known-vulnerabilities.md  requirements.md  research.md  sql-injection-prevention.md
scripts/: README.md  bootstrap.py  check-health.sh  generate-session.js  init-ssl.sh  init.sh  pre_deploy_check.ts  verify_reliability.js  verify_reliability.ts
src/: index.ts  server.ts
tests/: adminCommands.test.ts  blockService.test.ts  codeSmells.test.ts  configurationCompleteness.test.ts  contributingGuide.test.ts  creditSystem.test.ts  creditSystemProperty.test.ts  dependencySecurity.test.ts  downloadFunctionality.test.ts  errorHandling.test.ts  fileStructure.test.ts  formatExtraction.test.ts  inputValidation.test.ts  (+13 more)
(+182 files in other folders)
